--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -84,3 +84,11 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+.overlap-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    margin: 4px;
+}
